Base project navigation, commit listing and commit detail

--- a/web/tmpl/common.html
+++ b/web/tmpl/common.html
@@ -13,7 +13,7 @@
   <body>
     <div class='container'>
       <header>
-        <h2>Au Revoir</h2>
+        <h2><a href='/'>Au Revoir</a></h2>
       </header>
 
       <section>
