--- a/web/tmpl/index.html
+++ b/web/tmpl/index.html
@@ -2,6 +2,10 @@
 
   <p class='lead text-info'>Simple Code Review</p>
 
-  <p>Commits from <a href='/platform/commits'>platform</a></p>
+  <ul>\
+    {{ range . }}
+    <li><a href='/{{.}}/commits'>{{.}}</a></li>
+    {{ end }}
+  </ul>
 
 {{ template "footer" }}
