Showing message on commit detail

--- a/web/tmpl/commit.html
+++ b/web/tmpl/commit.html
@@ -1,6 +1,6 @@
 {{ template "header" }}
 
-  <p class='lead text-info'>commit {{ .Id }} <small>{{ .Msg }}</small></p>
+  <p class='lead text-info'>{{ .Id }} - <em><small class='muted'>{{ .Msg }}</small></em></p>
 
   <p>
     <pre>
